'No violations found' message was not formatted correctly. Added new span and class to ensure it is aligned in the centre of the results box and has padding around it.

--- a/css/home.css
+++ b/css/home.css
@@ -1053,6 +1053,12 @@ td:last-child li {
  background: url(../images/external-link-hover.png) center right no-repeat;
 }
 
+.no-violations {
+ display: block;
+ padding: 20px;
+ text-align: center;
+}
+
 /* Stats Counter
 ****************************************/
 #issueCounterWrap {
